welcome.lessons.welcome.array.indexof.value.IndexOfValue.scala.error
indexOfValue:3: error: illegal start of simple expression
		if(type(nums(j)==Int)){
                   ^indexOfValue:14: error: ')' expected but '}' found.
	}
        ^